[gd_scene load_steps=11 format=3 uid="uid://bvkivs7ivk36t"]

[ext_resource type="Script" uid="uid://rc3wd16yvmmt" path="res://Overall/BattleManager.gd" id="1_u7lsk"]
[ext_resource type="Texture2D" uid="uid://dthaa2gf85mhl" path="res://Environment/BattleIslands.png" id="2_u7lsk"]
[ext_resource type="PackedScene" uid="uid://cehddv2blo74p" path="res://Characters/Players/YouLiXue/YouLiXue.tscn" id="2_ur05b"]
[ext_resource type="PackedScene" uid="uid://cpnqfxol7pcw8" path="res://Characters/Players/YouLingMao/YouLingMao.tscn" id="3_aanfo"]
[ext_resource type="PackedScene" uid="uid://dqde4iybs6pff" path="res://Characters/Enemies/Crystal_Wolf/Crystal_Wolf.tscn" id="4_gm8w2"]
[ext_resource type="PackedScene" uid="uid://cnjwwtljrvecj" path="res://move_indicator/move_indicator.tscn" id="5_83pvr"]
[ext_resource type="Script" uid="uid://bhrvagkofw0pc" path="res://Skills/SkillRangeDisplay/SkillRangeDisplay.gd" id="6_4i15i"]
[ext_resource type="PackedScene" uid="uid://bns6pupqbqri" path="res://Characters/Enemies/Fire_Rat/fire_rat.tscn" id="6_ur05b"]
[ext_resource type="PackedScene" uid="uid://bxj3fq8aa0t4v" path="res://UI/timeline_display.tscn" id="8_2x04s"]
[ext_resource type="Script" uid="uid://bjtmimp1g4s0j" path="res://UI/EnergyBar.gd" id="9_7374y"]

[node name="BattleScene" type="Node2D"]
metadata/_edit_lock_ = true

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("1_u7lsk")

[node name="Environment" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Environment"]
position = Vector2(930, 300)
scale = Vector2(1.6, 1.6)
texture = ExtResource("2_u7lsk")
metadata/_edit_lock_ = true

[node name="Characters" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="Players" type="Node2D" parent="Characters"]
z_index = 1
y_sort_enabled = true

[node name="YouLiXue" parent="Characters/Players" instance=ExtResource("2_ur05b")]
z_as_relative = false
position = Vector2(557, 520)

[node name="YouLingMao" parent="Characters/Players" instance=ExtResource("3_aanfo")]
z_as_relative = false
position = Vector2(411, 714)

[node name="Enemies" type="Node2D" parent="Characters"]
z_index = 1
y_sort_enabled = true

[node name="Crystal_Wolf" parent="Characters/Enemies" instance=ExtResource("4_gm8w2")]
z_as_relative = false
position = Vector2(865, 607)

[node name="Fire_Rat" parent="Characters/Enemies" instance=ExtResource("6_ur05b")]
z_as_relative = false
position = Vector2(729, 486)

[node name="Indicator" type="Node2D" parent="Characters"]

[node name="MoveIndicator" parent="Characters/Indicator" instance=ExtResource("5_83pvr")]
z_index = -100

[node name="SkillRangeDisplay" type="Node2D" parent="Characters/Indicator"]
script = ExtResource("6_4i15i")

[node name="AreaIndicator" type="Area2D" parent="Characters/Indicator/SkillRangeDisplay"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Characters/Indicator/SkillRangeDisplay/AreaIndicator"]
light_mask = 0
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0)

[node name="Polygon2D" type="Polygon2D" parent="Characters/Indicator/SkillRangeDisplay/AreaIndicator"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="EnergyBar" type="CanvasLayer" parent="UI"]
layer = 50
script = ExtResource("9_7374y")

[node name="EnergyBarContainer" type="HBoxContainer" parent="UI/EnergyBar"]
anchors_preset = -1
offset_right = 57.0
offset_bottom = 40.0
alignment = 1

[node name="TitleLabel" type="Label" parent="UI/EnergyBar/EnergyBarContainer"]
layout_mode = 2
text = "能量："

[node name="FillContainer" type="Control" parent="UI/EnergyBar/EnergyBarContainer"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2

[node name="Background" type="ColorRect" parent="UI/EnergyBar/EnergyBarContainer/FillContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fill" type="ColorRect" parent="UI/EnergyBar/EnergyBarContainer/FillContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ValueLabel" type="Label" parent="UI/EnergyBar/EnergyBarContainer"]
layout_mode = 2
text = "0/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimelineDisplay" parent="UI" instance=ExtResource("8_2x04s")]

[node name="BattleCamera" type="Camera2D" parent="."]
position = Vector2(960, 540)
